--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
       "@octokit/core": "^3.5.1",
       "@octokit/plugin-retry": "^3.0.9",
       "@types/minipass": "^3.1.2",
+      "fs-extra": "^11.2.0",
       "js-yaml": "3.13.1"
    },
    "devDependencies": {
